vcluster_versioned_docs/version-0.20.0/configure/vcluster-yaml/experimental/virtual-cluster-kubeconfig.mdx
---
title: Virtual cluster kubeconfig
sidebar_label: virtualClusterKubeConfig
sidebar_position: 6
description: Configure vCluster to use a separate vCluster instance to run workloads.
---

import VirtualClusterKubeConfig from '../../../_partials/config/experimental/virtualClusterKubeConfig.mdx'

These options let the vCluster proxy connect to the underlying Kubernetes distribution. 

Each distribution has its own default locations where it writes its certificates and kubeconfig files. You don't need to configure these unless one of the following occurs:

- You want to use the no-op syncer to connect to a different Kubernetes cluster.
- You want to use an unsupported distribution that has different locations for each of these values.
- You want to use a new distribution version that has changed the default location, but vCluster doesn't support that new version.

<br/>
| Deprecated Parameter             | Config Field       | 
| -------------------------------- | ------------------ | 
| `--client-ca-cert`  | `clientCACert` |
| `--kube-config`         |  `kubeConfig`        | 
| `--request-header-ca-cert` | `requestHeaderCACert` |
| `--server-ca-cert` | `serverCACert` |
| `--server-ca-key`           | `serverCAKey`     | 

## Config reference

<VirtualClusterKubeConfig/>
